--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^5.3.2+2
+
 
 
   # The following adds the Cupertino Icons font to your application.
