--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   weekday_selector: ^0.4.0
   flutter_localizations:
     sdk: flutter
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
+  firebase_core: ^0.5.0
+  provider: ^4.3.2+2
+  flutter_spinkit: ^4.1.2
 
 
 
