--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
   flutter_auth_buttons: ^0.10.0
+  shared_preferences: ^0.5.12
+
 
 
 
@@ -60,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lang/en.json
+    - lang/ar.json
+   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
