--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="project_doctor"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB5qIMjaJgXjzE_Uzcm3S6Fmddl8jTI9us"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
