--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,10 @@ flutter:
     - family: noto_arabic
       fonts:
         - asset: assets/fonts/noto_arabic.ttf
+    - family: Helvetica
+      fonts:
+        - asset: assets/fonts/HelveticaNow-Regular.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
