get the email address for better ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,9 +73,9 @@ flutter:
     - lang/ar.json
     - assets/images/email.png
     - assets/images/doctor.png
+    - assets/images/password.png
 
 
-   
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
