--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,20 +25,18 @@ dependencies:
     sdk: flutter
   geolocator: ^5.3.2+2
   http:
-  weekday_selector: ^0.4.0
   flutter_localizations:
     sdk: flutter
-  google_maps_flutter: 0.5.33
+  google_maps_flutter: ^1.0.2
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
   firebase_core: ^0.5.0
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
-  flutter_auth_buttons: ^0.10.0
   shared_preferences: ^0.5.12
   connectivity: ^0.4.9+3
-  flutter_svg: ^0.19.0
-  auto_size_text: ^2.1.0
+  dropdownfield: ^1.0.3
+
 
 
 
