added speciality as an advertisment

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ flutter:
     - assets/images/email.png
     - assets/images/doctor.png
     - assets/images/password.png
+    - assets/images/speciality.png
+
+
 
 
 
