--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,3 +63,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 }
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
