--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   google_maps_flutter: ^1.0.2
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
-  firebase_core: ^0.5.0
+  firebase_core:
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.12
