--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,8 @@ dependencies:
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.12
   dropdownfield: ^1.0.3
-
+  intl: ^0.16.1
   change_app_package_name: ^0.1.2
-
   auto_size_text: ^2.1.0
 
 
