--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_maps_flutter: ^1.0.2
+  flutter_google_places: ^0.2.6
+  location: ^3.0.2
+  rxdart: ^0.24.1
+
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
   firebase_core:
@@ -38,6 +42,8 @@ dependencies:
   intl: ^0.16.1
   change_app_package_name: ^0.1.2
   auto_size_text: ^2.1.0
+  weekday_selector: ^0.4.0
+
 
 
 
