--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   firebase_core:
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
-  shared_preferences: ^0.5.12
+  shared_preferences: ^0.5.12+4
   dropdownfield: ^1.0.3
   intl: ^0.16.1
   change_app_package_name: ^0.1.2
