--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   change_app_package_name: ^0.1.2
   auto_size_text: ^2.1.0
   weekday_selector: ^0.4.0
+  flutter_launcher_icons: ^0.8.1
+
 
 
 
@@ -67,6 +69,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -83,10 +90,7 @@ flutter:
     - lang/en.json
     - lang/ar.json
     - assets/images/
-    - assets/images/email.png
-    - assets/images/doctor.png
-    - assets/images/password.png
-    - assets/images/speciality.png
+
 
 
 
