--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   auto_size_text: ^2.1.0
   weekday_selector: ^0.4.0
   flutter_launcher_icons: ^0.8.1
+  device_preview: ^0.5.5
+
 
 
 
