--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^1.6.24
   flutter_launcher_icons: ^0.8.1
   device_preview: ^0.5.5
+  url_launcher: ^5.7.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
