--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^5.3.2+2
-  http:
+  http: ^0.12.2
   flutter_localizations:
     sdk: flutter
   google_maps_flutter: ^1.0.2
@@ -49,7 +49,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  geocoder: ^0.2.1
 
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
