--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
   firebase_core:
+  firebase_crashlytics: ^0.2.4
+  firebase_analytics: ^6.3.0
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.12+4
