--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,10 +32,9 @@ def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
-
 android {
-    compileSdkVersion 28
-
+    compileSdkVersion 29
+    ndkVersion "21.1.6352462"
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -48,9 +47,12 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "hhk.projectdoctor.beta.ak"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        ndk {
+            debugSymbolLevel 'SYMBOL_TABLE'
+        }
     }
 
        signingConfigs {
@@ -66,7 +68,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
@@ -78,6 +80,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation "androidx.multidex:multidex:2.0.0"
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
@@ -86,3 +89,4 @@ dependencies {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+
