--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.2.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -31,11 +31,11 @@ dependencies:
   flutter_google_places: ^0.2.6
   # location: ^3.0.2
   rxdart: ^0.24.1
-  firebase_auth: ^0.18.4+1
-  cloud_firestore: ^0.14.4
-  firebase_core:
-  firebase_crashlytics: ^0.2.4
-  firebase_analytics: ^6.3.0
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
+  firebase_core: ^0.7.0
+  firebase_crashlytics: ^0.4.0+1
+  firebase_analytics: ^7.0.1
   provider: ^4.3.2+2
   flutter_spinkit: ^4.1.2
   shared_preferences: ^0.5.12+4
