--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="Cura"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB5qIMjaJgXjzE_Uzcm3S6Fmddl8jTI9us"/>
+            android:value="${mapsApiKey}"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
