--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,35 +23,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^5.3.2+2
-  http: ^0.12.2
+  geolocator: ^7.0.1
+  http: ^0.13.1
   flutter_localizations:
     sdk: flutter
-  google_maps_flutter: ^1.0.2
-  flutter_google_places: ^0.2.6
+  google_maps_flutter: ^2.0.1
+  flutter_google_places: ^0.2.8
   # location: ^3.0.2
-  rxdart: ^0.24.1
-  firebase_auth: ^0.18.4+1
-  cloud_firestore: ^0.14.4
-  firebase_core:
-  firebase_crashlytics: ^0.2.4
-  firebase_analytics: ^6.3.0
-  provider: ^4.3.2+2
-  flutter_spinkit: ^4.1.2
-  shared_preferences: ^0.5.12+4
+  rxdart: 
+  firebase_auth: ^1.0.1
+  cloud_firestore: ^1.0.2
+  firebase_core: ^1.0.2
+  firebase_crashlytics: ^1.0.0
+  firebase_analytics: 
+  provider: ^5.0.0
+  flutter_spinkit: ^5.0.0
+  shared_preferences: ^2.0.5
   dropdownfield: ^1.0.3
-  intl: ^0.16.1
+  intl: ^0.17.0
   change_app_package_name: ^0.1.2
   auto_size_text: ^2.1.0
   weekday_selector: ^0.4.0
-  path_provider: ^1.6.24
-  flutter_launcher_icons: ^0.8.1
-  device_preview: ^0.5.5
-  url_launcher: ^5.7.10
+  path_provider: ^2.0.1
+  flutter_launcher_icons: ^0.9.0
+  device_preview: ^0.7.1
+  url_launcher: ^6.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  geocoder: ^0.2.1
+  cupertino_icons: ^1.0.2
+  geocoder: 
 
   
 dev_dependencies:
