--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,8 @@ dependencies:
   flutter_native_splash: ^1.1.8+4
   flutter_launcher_icons: ^0.9.0
   change_app_package_name: ^0.1.2
+  easy_localization: ^3.0.0
 
-
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +55,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/home/
+    - assets/translations/
     - lang/en.json
     - lang/ar.json
 
