--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,8 @@ dependencies:
 # google API
   geolocator: ^7.0.1
   geocoder: 
-  http: ^0.13.1
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
   google_maps_flutter: ^2.0.1
   flutter_google_places: ^0.3.0
   firebase_auth: ^1.0.1
@@ -29,15 +27,11 @@ dependencies:
   provider: ^5.0.0
   flutter_spinkit: ^5.0.0
   shared_preferences: ^2.0.5
-  dropdownfield: ^1.0.3
   auto_size_text: ^2.1.0
   weekday_selector: ^0.4.0
   path_provider: ^2.0.1
   device_preview: ^0.7.1
   url_launcher: ^6.0.2
-  flutter_native_splash: ^1.1.8+4
-  flutter_launcher_icons: ^0.9.0
-  change_app_package_name: ^0.1.2
   easy_localization: ^3.0.0
   stacked_themes: ^0.3.2
 
@@ -45,11 +39,22 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  change_app_package_name: ^0.1.2
+  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.1.5+1
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
+
+flutter_native_splash:
+  android : true
+  ios: true
+  image: assets/splash/splash.png
+  image_dart: assets/splash/splash.png
+  color: "#FFFFFF"
+  color_dark: "#1D3557"
 
 flutter:
   uses-material-design: true
@@ -64,9 +69,9 @@ flutter:
     - family: noto_arabic
       fonts:
         - asset: assets/fonts/noto_arabic.ttf
-    - family: Helvetica
+    - family: Montserrat
       fonts:
-        - asset: assets/fonts/HelveticaNow-Regular.ttf
-    - family: Nova
+        - asset: assets/fonts/Montserrat-Regular.ttf
+    - family: OpenSans
       fonts:
-        - asset: assets/fonts/Proxima-Nova-Regular.otf
+        - asset: assets/fonts/OpenSans-Regular.ttf
