--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: project_doctor
 description: Cross-Platoform Health related app
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.3.0+6
 
@@ -35,8 +35,6 @@ dependencies:
   easy_localization: ^3.0.0
   stacked_themes: ^0.3.2
   another_flushbar: ^1.10.20
-
-
 
 dev_dependencies:
   flutter_test:
