--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   easy_localization: ^3.0.0
   stacked_themes: ^0.3.2
   another_flushbar: ^1.10.20
+  rounded_loading_button: ^2.0.3
+  connectivity: ^3.0.3
+  data_connection_checker: ^0.3.4
+
+
+
 
 
 dev_dependencies:
@@ -61,6 +67,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/home/
+    - assets/images/auth/
     - assets/translations/
     - lang/en.json
     - lang/ar.json
