--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>hhk.projectDoctor.beta.ak</string>
+	<string>hhk.projectdoctor.beta.ak</string>
 	<key>PROJECT_ID</key>
 	<string>project-doctor-88794</string>
 	<key>STORAGE_BUCKET</key>
